--- a/portfolio/src/components/AboutMe.css
+++ b/portfolio/src/components/AboutMe.css
@@ -3,4 +3,20 @@
     font-size: medium;
     font-family: Arial, Helvetica, sans-serif;
     text-indent: 25px;
+    color: ivory;
 }
+
+@media (min-width: 0px) and (max-width: 1000px)  {
+    .about{
+        display: none;
+    }
+}
+
+@media (min-width: 1000px) and (max-width: 3200px) {
+    .about{
+        display: block;
+    }
+}
+
+
+
